--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "node-mapper",
+    "proxy-request"
+  ],
+  "author": "Manikandan H",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
